fix: 修改一下回滚后的警告